# xpad3-cli

./: .gitignore  BEGINNER_GUIDE.md  Cargo.toml  DESIGN.md  NOTICE.md  README.md  assets.lock.json  build.rs  sources.lock.json
.cargo/: config.toml
.github/workflows/: source-lock.yml
keys/: catalog-release-public.pem
src/: apk.rs  catalog.rs  device.rs  embedded.rs  error.rs  install.rs  logging.rs  main.rs  model.rs  ota.rs  profile.rs  root.rs  transaction.rs  update.rs  util.rs
tools/: build_android.sh  collect_rust_licenses.sh  package_release.sh  sign_catalog.sh  verify_release.sh  verify_sources.sh
